SalesforceProject2/src/objects/Writter__c.object
<CustomObject>
    <fields>
        <fullName>diz_date__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_formula_c__c</fullName>
        <description>test</description>
        <formula>TODAY() == TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>diz_formula_c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <label>Writter</label>
    <nameField>
        <label>Writter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Writter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>diz_writter</fullName>
        <active>true</active>
        <description>test</description>
        <errorConditionFormula>diz_phone__c != NULL</errorConditionFormula>
        <errorMessage>enter the phone</errorMessage>
    </validationRules>
</CustomObject>